--- a/package.json
+++ b/package.json
@@ -10,8 +10,22 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.3.2",
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/native-stack": "^7.2.1",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "^0.78.0",
+    "react-native-chart-kit": "^6.12.0",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-paper": "^5.13.1",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-svg": "^15.11.2",
+    "react-native-table-component": "^1.2.2",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -25,10 +39,13 @@
     "@react-native/metro-config": "0.78.0",
     "@react-native/typescript-config": "0.78.0",
     "@types/jest": "^29.5.13",
-    "@types/react": "^19.0.0",
+    "@types/react": "^19.0.10",
+    "@types/react-native": "^0.73.0",
+    "@types/react-navigation": "^3.4.0",
     "@types/react-test-renderer": "^19.0.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
+    "metro-config": "^0.82.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.0.0",
     "typescript": "5.0.4"
