--- a/package.json
+++ b/package.json
@@ -13,23 +13,28 @@
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.2.1",
-    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/elements": "^2.3.6",
+    "@react-navigation/native": "^7.1.4",
     "@react-navigation/native-stack": "^7.2.1",
+    "@react-navigation/stack": "^7.2.8",
     "axios": "^1.8.4",
+    "deprecated-react-native-prop-types": "^5.0.0",
     "react": "19.0.0",
     "react-native": "^0.78.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "^2.25.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.13.1",
-    "react-native-reanimated": "^3.17.1",
+    "react-native-reanimated": "^3.17.2",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.1",
+    "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-table-component": "^1.2.2",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-webview": "^13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
